<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Candroid Sample</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="select_date">Select Dates</string>
    <string name="set_disabled_date">Set Disabled Dates</string>
    <string name="set_min_date">Set Min Date</string>
    <string name="set_max_date">Set Max Date</string>
    <string name="enable_arrows">Enable Arrows</string>
    <string name="undo">Undo</string>

</resources>